# vala-presentation-xx-basealt

./: README.md  meson.build
build-aux/flatpak/: space.rirusha.PresApp-Devel.json
data/: meson.build  space.rirusha.PresApp.desktop.in  space.rirusha.PresApp.gresource.xml  style.css
data/ui/: main-window.blp
src/: application.vala  main-window.vala  main.vala  meson.build
